feat(campus-repair): 派单调度模块 + AI 能力增强（混合检索 / token 兜底 / RAG 评测）后端
第二轮提质后端实现，全量测试 56 个用例通过（mvn -o test，H2 内存库）。

1) 维修工派单调度模块（提质规划 V2「AI 辅助调度」）
- 新增 module/dispatch：维修员画像 worker_profile + 候选评分快照 worker_dispatch_score_snapshot
- 规则评分：技能 40 / 部门 20 / 负载 20 / 历史质量 20，返工退回最多扣 15，输出 Top3 与可解释原因
- 新增 GET /api/v1/admin/tickets/{ticketId}/dispatch-suggestion：来源(AI/AI_FALLBACK/RULE) + 推荐人 + 推荐原因 + 候选
- AI 只能在候选 Top3 内选择，越界自动回退规则第一名并记录 WARN 日志
- 维修员画像维护：部门、技能标签、是否参与派单、最大活跃工单数

2) 混合检索 + RRF 融合
- 新增 RagFusionService：score = Σ weight/(k+rank)，融合关键词与向量两路召回，只依赖名次因此分数可比
- RagKnowledgeService.searchDetailed：两路召回 + RRF + 重排，并返回候选数/重叠数/主导来源等诊断信息
- 配置 app.agent.rag.hybrid.*；向量库不可用时自动退化为关键词检索，不报错

3) token 实时监控与降级兜底
- 新增 AiTokenMonitor / AiTokenEstimator / DegradeLevel：NORMAL → DROP_IMAGES → MINIMAL_CONTEXT → RULE_ONLY 四档降级
- 当日用量由 ai_task_record 聚合得到（重启后仍准确）；优先使用模型返回的 tokenUsage，缺失时本地估算
- RULE_ONLY 时跳过模型调用、直接规则兜底，且不写入 token 消耗，避免预算被虚增
- 新增 GET /api/v1/admin/ai/token-usage（管理员）

4) RAG 自动化评测
- 新增 module/rageval：HitRate / Recall@k / Precision@k / MRR / nDCG@k / 拒答准确率
- 支持 JSONL 导入（兼容 query、gold_doc_ids、input、answerable 等开源评测集字段别名），逐条结果保存召回片段快照
- 接口 /api/v1/admin/rag/eval/{datasets,cases,cases/import,runs,runs/{id}}

SQL：13/14 派单调度建表与演示数据，15 token 监控字段，16/17 RAG 评测三表与内置中文评测集
测试：新增 48 个用例（派单 12、混合检索 10、token 16、RAG 评测 11），另含派单链路与降级兜底集成测试